sunuo (0.2.1) unstable; urgency=low

  * ignore misconfiguration in Scripts/Misc/DataPath.cs, just like RunUO
    does
  * implemented a stripped down SunUO server as login server, with account
    database in ODBC
  * ExtendedCommand does its own in-game check, removed requirement
  * added ExtendedCommand 0x5555 which will serve as container for our
    protocol extensions

 --

sunuo (0.2.0) unstable; urgency=low

  * make NetState.PacketEncoder non-static (patch from Sebastian Hartte)
  * added RunUO-Encryption-2.1.zip to core (from Sebastian Hartte)
  * fixed remote vulnerability in Network/PacketHandlers.cs, thanks to
    Barakat for reporting that
  * show a clear message when MCS is not installed

 -- Max Kellermann <max@duempel.org>  Tue, 29 Nov 2005 15:45:18 +0100

sunuo (0.1.9) unstable; urgency=low

  * created debian package (not yet done)
  * fixed typo in Config.cs which disabled <ignore-type/>
  * write etc/sunuo.xml only if it did not exist
  * fixed NullReferenceException in overlay error handler
  * home page changed to http://www.sunuo.org/
  * the mailing list is now hosted on BerliOS
  * added option to disable a script library
  * added option to set the C# compiler's warning level
  * fixed NullReferenceException in binary library loader
  * library names are case insensitive
  * added the --logfile option

 -- Max Kellermann <max@duempel.org>  Thu, 30 Jun 2005 23:55:12 +0200

sunuo (0.1.8) unstable; urgency=low

  * more NetStat.Dispose() tweaks:
    - a second Dispose() call continues with FinishDispose()
    - call FinishDispose() in CheckAlive()
  * remove duplicate data directories
  * replaced World.MultiProcessor by Core.Config.MultiThreading
  * added configuration file option for Core.Config.MultiThreading

 -- Max Kellermann <max@duempel.org>  Tue, 10 May 2005 00:23:05 +0200

sunuo (0.1.7) unstable; urgency=low

  * wait for send transfers to be finished before killing the connection
    in NetState.Dispose()