@@ -7,6 +7,7 @@ sunuo (0.2.1) unstable; urgency=low
   * ExtendedCommand does its own in-game check, removed requirement
   * added ExtendedCommand 0x5555 which will serve as container for our
     protocol extensions
+  * configuration option for "super clients"
 
  --
 
